--- a/css/style.css
+++ b/css/style.css
@@ -6,15 +6,34 @@
 img {
   max-width: 100%; }
 
-body, ul, li {
+body {
+  margin: 0;
+  padding: 0;
+  background: #fff; }
+
+ul {
   margin: 0;
   padding: 0; }
 
-p, li, h1, h2, h3, h4 {
+li {
+  margin: 0;
+  padding: 0;
   color: #4e4e4e; }
 
-body {
-  background: #fff; }
+p {
+  color: #4e4e4e; }
+
+h1 {
+  color: #4e4e4e; }
+
+h2 {
+  color: #4e4e4e; }
+
+h3 {
+  color: #4e4e4e; }
+
+h4 {
+  color: #4e4e4e; }
 
 .wrapper {
   width: 98%;
@@ -42,26 +61,30 @@ header {
   header nav {
     float: right;
     position: relative; }
-  header h2 {
-    line-height: 0;
-    margin: 0;
-    text-indent: -10000px; }
-  header ul {
-    margin: 0;
-    padding: 0; }
-  header li {
-    list-style-type: none;
-    float: left;
-    margin-left: 1.25rem;
-    margin-top: 0.625rem; }
-  header a {
-    text-decoration: none;
-    color: #29a29f; }
-
-header:after {
-  display: block;
-  content: "";
-  clear: both; }
+    header nav h2 {
+      line-height: 0;
+      margin: 0;
+      text-indent: -10000px; }
+    header nav ul {
+      margin: 0;
+      padding: 0; }
+    header nav li {
+      list-style-type: none;
+      float: left;
+      margin-left: 1.25rem;
+      margin-top: 0.625rem; }
+    header nav li.tw {
+      list-style-type: none;
+      float: left;
+      margin-left: 1.25rem;
+      margin-top: 0.625rem; }
+    header nav a {
+      text-decoration: none;
+      color: #29a29f; }
+  header:after {
+    display: block;
+    content: "";
+    clear: both; }
 
 .section-b {
   padding-top: 1rem;
@@ -74,7 +97,11 @@ header:after {
   .section-b li {
     margin-bottom: 1em;
     background: #fff;
-    color: #333; }
+    color: #fff; }
+  .section-b p {
+    line-height: 1.5; }
+  .section-b h1 {
+    font-size: 3rem; }
 
 .card-content {
   padding: 1.5em; }
@@ -86,9 +113,6 @@ header:after {
   max-width: 1170px;
   font-size: 0.7em; }
 
-.company-info {
-  background: #e7e7e7; }
-
 .contact form {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -97,30 +121,43 @@ header:after {
     display: block; }
   .contact form .full {
     grid-column: 1 / 3; }
+  .contact form button {
+    width: 100%;
+    padding: 1em;
+    border: 0.063rem dotted #29a29f;
+    background: #29a29f;
+    border: 0;
+    text-transform: uppercase;
+    color: #fff; }
+    .contact form button:hover {
+      background: #e7e7e7;
+      color: #333;
+      outline: 0;
+      -webkit-transition: background-color 0.5s ease-out;
+      -o-transition: background-color 0.5s ease-out;
+      transition: background-color 0.5s ease-out; }
+    .contact form button:focus {
+      background: #e7e7e7;
+      color: #333;
+      outline: 0;
+      -webkit-transition: background-color 0.5s ease-out;
+      -o-transition: background-color 0.5s ease-out;
+      transition: background-color 0.5s ease-out; }
+  .contact form input {
+    width: 100%;
+    padding: 1em;
+    border: 0.063rem dotted #4e4e4e;
+    background-color: #eeeeee; }
+  .contact form textarea {
+    width: 100%;
+    padding: 1em;
+    border: 0.063rem dotted #4e4e4e;
+    background-color: #eeeeee; }
 
 label {
   text-align: left;
   padding-bottom: 0.5rem;
   font-size: 0.7rem; }
-
-.contact form button, .contact form input, .contact form textarea {
-  width: 100%;
-  padding: 1em;
-  border: 0.063rem dotted #29a29f; }
-
-.contact form button {
-  background: #29a29f;
-  border: 0;
-  text-transform: uppercase;
-  color: #fff; }
-
-.contact form button:hover, .contact form button:focus {
-  background: #eaeaea;
-  color: #333;
-  outline: 0;
-  -webkit-transition: background-color 0.5s ease-out;
-  -o-transition: background-color 0.5s ease-out;
-  transition: background-color 0.5s ease-out; }
 
 footer {
   background: #29a29f;
@@ -145,12 +182,12 @@ footer {
     top: 1.875rem;
     right: 15rem;
     visibility: hidden; }
-  footer footer .logos_2 img {
+  footer .logos_2 img {
     position: absolute;
     width: 8%;
     top: 2.063rem;
     visibility: hidden; }
-  footer footer .logos_3 img {
+  footer .logos_3 img {
     position: absolute;
     width: 8%;
     top: 1.688rem;
@@ -173,35 +210,35 @@ footer {
     padding-bottom: 0; }
     header nav {
       background: #e7e7e7; }
-    header li {
-      float: none;
-      width: 100%;
-      margin: 0; }
+      header nav li {
+        float: none;
+        width: 100%;
+        margin: 0; }
+        header nav li a {
+          display: block;
+          text-align: center;
+          padding-top: 2rem;
+          color: #fff; }
+      header nav ul {
+        height: 0;
+        overflow: hidden;
+        background-color: #29a29f; }
+      header nav ul.open {
+        height: auto; }
     header .wrapper {
       padding: 0;
       width: 100%; }
-    header a {
-      display: block;
-      text-align: center;
-      padding-top: 2rem;
-      color: #fff; }
+    header img {
+      position: absolute;
+      width: 95%;
+      top: 1rem;
+      left: 0.6rem; }
   #burger-nav {
-    background-color: #e7e7e7;
+    background-color: #29a29f;
     width: 100%;
     height: 2.5rem;
     background: url(images/burger.png) no-repeat 97% center;
     cursor: pointer; }
-  header nav ul {
-    height: 0;
-    overflow: hidden;
-    background-color: #29a29f; }
-  header nav ul.open {
-    height: auto; }
-  header img {
-    position: absolute;
-    width: 95%;
-    top: 1rem;
-    left: 0.6rem; }
   footer {
     background: #29a29f;
     padding: 5rem 0;
