--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,219 +1,256 @@
-// Variables
+//Variables
 
+$svart: #4e4e4e;
 $blue: #29a29f;
-$grey: #e7e7e7;
-$White: #fff;
-$Sectionheading: 24px;
-
-
-//@import "variables";
-//@import "mixins";
+$blackDark: #333;
+$white: #fff;
+$greyLight: #e7e7e7;
+$greySuperLight: #eeeeee;
 
 
 
-// Reset
-
-*{
-    font-family: Arial;
-    box-sizing: border-box;
+* {
+	font-family: Arial;
+	box-sizing: border-box;
 }
-
 img {
-    max-width: 100%;
+	max-width: 100%;
 }
-
-body, ul, li{
-    margin: 0;
-    padding: 0;
+body {
+	margin: 0;
+	padding: 0;
+	background: $white;
 }
-
-p, li, h1, h2, h3, h4{
-    color: #4e4e4e;
+ul {
+	margin: 0;
+	padding: 0;
 }
-
-body{
-    background: #fff;
+li {
+	margin: 0;
+	padding: 0;
+	color: $svart;
 }
+p {
+	color: $svart;
+}
+h1 {
+	color: $svart;
+}
+h2 {
+	color: $svart;
+}
+h3 {
+	color: $svart;
+}
+h4 {
+	color: $svart;
+}
+.wrapper {
+	width: 98%;
+	max-width: 1200px;
+	margin: 0 auto;
+	padding: 0 2%;
+}//reset end
 
-.wrapper{
-    width: 98%;
-    max-width: 1200px;
-    margin: 0 auto;
-    padding: 0 2%;     
-}// Reset end
 
 
-header{
-    background: $grey;
-    padding: 2.5rem 0;
-    position: relative;
-    img{
-      position: absolute;
-      width: 25%;
-      top: 1.2rem;
-      left: 2.1rem;
-      margin-bottom: 0;   
+header {
+	background: $greyLight;
+	padding: 2.5rem 0;
+	position: relative;
+	img {
+		position: absolute;
+		width: 25%;
+		top: 1.2rem;
+		left: 2.1rem;
+		margin-bottom: 0;
+	}
+	h1 {
+		margin: 0;
+		text-indent: -10000px;
+		background-position: center;
+		background-size: cover;
+		background-size: contain;
+		float: left;
+	}
+	nav {
+		float: right;
+		position: relative;
+		h2 {
+			line-height: 0;
+			margin: 0;
+			text-indent: -10000px;
+		}
+		ul {
+			margin: 0;
+			padding: 0;
+		}
+		li {
+			list-style-type: none;
+			float: left;
+			margin-left: 1.25rem;
+			margin-top: 0.625rem;
+		}
+		li.tw {
+			list-style-type: none;
+			float: left;
+			margin-left: 1.25rem;
+			margin-top: 0.625rem;
+		}
+		a {
+			text-decoration: none;
+			color: $blue;
+		}
+	}
+	&:after {
+		display: block;
+		content: "";
+		clear: both;
+	}
+}//header end
+
+
+
+.section-b {
+	padding-top: 1rem;
+	box-sizing: border-box;
+	ul {
+		list-style: none;
+		margin: 0;
+		padding: 0;
+	}
+	li {
+		margin-bottom: 1em;
+		background: $white;
+		color: $white;
+	}
+    p{
+        line-height: 1.5;
     }
     h1{
-      margin: 0;
-      text-indent: -10000px;
-      background-position: center;
-      background-size: cover;
-      background-size:contain;
-      float: left;    
+        font-size: 3rem;
     }
-    nav{
-      float: right;
-      position: relative;
-    }
-    
-    h2{
-      line-height: 0;
-      margin: 0;
-      text-indent: -10000px;
-    }
-    ul{
-      margin: 0;
-      padding: 0;
-    }
-    li{
-      list-style-type: none;
-      float: left;
-      margin-left: 1.25rem;
-      margin-top: 0.625rem;  
-    }
-    a{
-    text-decoration: none;
-    color: $blue;
-    }   
-}//end header
+}//.section-b end
 
 
-header:after{
-    display: block;
-    content: "";
-    clear: both;
+
+.card-content {
+	padding: 1.5em;
 }
 
 
 
-.section-b{
-        padding-top: 1rem;
-        box-sizing: border-box;
-        ul{
-        list-style: none;
-        margin: 0;
-        padding: 0;
-        }
-        li{
-        margin-bottom: 1em;
-        background: #fff;
-        color: #333;   
-        }
-}// .section-b end
 
-
-.card-content{
-        padding: 1.5em;
-    }// .card-content end
-
-
-.card{
-     margin: 0 auto;   
-     }// .card end
+.card {
+	margin: 0 auto;
+}//.card end
 
 
 
-.container{
-  max-width:1170px;
-  font-size: 0.7em;
- }//.container end
+
+.container {
+	max-width: 1170px;
+	font-size: 0.7em;
+}
+
+.contact {
+	form {
+		display: grid;
+		grid-template-columns: 1fr 1fr;
+		grid-gap: 1.25rem;
+		label {
+			display: block;
+		}
+		.full {
+			grid-column: 1 / 3;
+		}
+		button {
+			width: 100%;
+			padding: 1em;
+			border: 0.063rem dotted $blue;
+			background: $blue;
+			border: 0;
+			text-transform: uppercase;
+			color: $white;
+			&:hover {
+				background: $greyLight;
+				color: $blackDark;
+				outline: 0;
+				transition: background-color 0.5s ease-out;
+			}
+			&:focus {
+				background: $greyLight;
+				color: $blackDark;
+				outline: 0;
+				transition: background-color 0.5s ease-out;
+			}
+		}
+		input {
+			width: 100%;
+			padding: 1em;
+			border: 0.063rem dotted $svart;
+            background-color: $greySuperLight;
+		}
+		textarea {
+			width: 100%;
+			padding: 1em;
+			border: 0.063rem dotted $svart;
+            background-color: $greySuperLight;
+		}
+	}
+}//.contact end
 
 
-.company-info{
-  background: $grey;
-}//.company-info end
 
-
-.contact form{
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  grid-gap:1.25rem;
-  label{
-  display:block;
-  }
-  .full{
-  grid-column: 1 / 3;
-  }    
-      
+label {
+	text-align: left;
+	padding-bottom: 0.5rem;
+	font-size: 0.7rem;
 }
 
 
-label{
-    text-align: left;
-    padding-bottom: 0.5rem;
-    font-size: 0.7rem
-}
 
-.contact form button, .contact form input, .contact form textarea{
-  width:100%;
-  padding: 1em;
-  border: 0.063rem dotted #29a29f;
-}
+footer {
+	background: $blue;
+	padding: 1rem 0;
+	position: relative;
+	height: 6rem;
+	li {
+		display: flex;
+		width: 100%;
+		color: $white;
+		font-size: 0.875rem;
+		text-decoration: none;
+		justify-content: center;
+		line-height: 1.5;
+	}
+	.logos {
+		img {
+			position: absolute;
+			width: 8%;
+			top: 1.875rem;
+			right: 15rem;
+			visibility: hidden;
+		}
+	}
+	.logos_2 {
+		img {
+			position: absolute;
+			width: 8%;
+			top: 2.063rem;
+			visibility: hidden;
+		}
+	}
+	.logos_3 {
+		img {
+			position: absolute;
+			width: 8%;
+			top: 1.688rem;
+			visibility: hidden;
+		}
+	}
+}// footer end
 
-.contact form button{
-  background:#29a29f;
-  border: 0;
-  text-transform: uppercase;
-  color: #fff;
-}
-
-.contact form button:hover,.contact form button:focus{
-  background:#eaeaea;
-  color:#333;
-  outline:0;
-  transition: background-color 0.5s ease-out;
-}
-
-
-footer{
-    background: #29a29f;
-    padding: 1rem 0;
-    position: relative;
-    height: 6rem;
-    li{
-    display: flex;
-    width: 100%;
-    color: #fff;
-    font-size: 0.875rem;
-    text-decoration: none;
-    justify-content: center;
-    line-height: 1.5; 
-    } 
-    .logos img{
-    position: absolute;
-    width: 8%;
-    top: 1.875rem;
-    right: 15rem;
-    visibility: hidden;
-    }
-    footer .logos_2 img{
-    position: absolute;
-    width: 8%;
-    top: 2.063rem;
-    visibility: hidden;
-    }
-    footer .logos_3 img{
-    position: absolute;
-    width: 8%;
-    top: 1.688rem;
-    visibility: hidden;    
-    }  
-}//footer end
-
-
-
-//MEDIA QUERIES 
 
 @media screen and (max-width: 960px){
     
@@ -221,117 +258,122 @@ footer{
 
 
 
-@media screen and (max-width: 768px){
-    
-    
-    header nav{
-    float: none;
-    li{
-    margin-left: 0;
-    width: 16.66%;
-    text-align: center;
-    font-size: 0.875rem;
-    }
-    }//header nav end 
-    
-    header h1.logo{
-    float: none;
-    margin: 0 auto 3rem;
-    }    
+@media screen and (max-width: 768px) {
+	header {
+		nav {
+			float: none;
+			li {
+				margin-left: 0;
+				width: 16.66%;
+				text-align: center;
+				font-size: 0.875rem;
+			}
+		}
+		h1.logo {
+			float: none;
+			margin: 0 auto 3rem;
+		}
+	}
 }
 
-@media screen and (max-width: 480px){
+
+
+
+@media screen and (max-width: 480px) {
+	header {
+		nav {
+			li {
+				float: none;
+				width: 100%;
+				margin: 0;
+				a {
+					display: block;
+					text-align: center;
+					padding-top: 2rem;
+					color: $white;
+				}
+			}
+			background: $greyLight;
+			ul {
+				height: 0;
+				overflow: hidden;
+				background-color: $blue;
+			}
+			ul.open {
+				height: auto;
+			}
+		}
+		.wrapper {
+			padding: 0;
+			width: 100%;
+		}
+		padding-bottom: 0;
+		img {
+			position: absolute;
+			width: 95%;
+			top: 1rem;
+			left: 0.6rem;
+		}
+	}
     
-    header{
-    padding-bottom: 0;
-    nav{
-    background: #e7e7e7;
-    }
-    li{
-    float: none;
-    width: 100%;
-    margin: 0;
-    }
-    .wrapper{
-    padding: 0;
-    width: 100%;
-    }
-    a{
-    display: block;
-    text-align: center; 
-    padding-top: 2rem;
-    color: #fff;
-    }
-    }//end header
-      
-
-#burger-nav{
-    background-color: #e7e7e7;
-    width: 100%;
-    height: 2.5rem;
-    background: url(images/burger.png) no-repeat 97% center;
-    cursor: pointer;        
-    }
-
-
-header nav ul{
-    height: 0;
-    overflow: hidden;
-    background-color: #29a29f;
-    }
-
-header nav ul.open{
-    height: auto;
-    }      
-
-header img{
-    position: absolute;
-    width: 95%;
-    top: 1rem;
-    left: 0.6rem;   
-    }
 
     
-footer{
-    background: #29a29f;
-    padding: 5rem 0;
-    position: relative;
-    height: 14.375rem;
-    ul{
-    flex-direction: column;
-    padding-top: 1rem;
-    }
-    li{
-    display: flex;
-    width: 100%;
-    color: #fff;
-    font-size: 0.875rem;
-    text-decoration: none;
-    justify-content: center;
-    line-height: 1.5; 
-    } 
-    .logos img{
-    position: absolute;
-    width: 8%;
-    top: 1.875rem;
-    right: 15rem;
-    visibility: visible;   
-    }
-    .logos_2 img{
-    position: absolute;
-    width: 8%;
-    top: 2.063rem;
-    right: 11.875rem;
-    visibility: visible;
-    }
-    .logos_3 img{
-    position: absolute;
-    width: 8%;
-    top: 1.688rem;
-    right: 8.75rem;
-    visibility: visible;
-    }   
-    }// footer end
-     
+	#burger-nav {
+		background-color: $blue;
+		width: 100%;
+		height: 2.5rem;
+		background: url(images/burger.png) no-repeat 97% center;
+		cursor: pointer;
+	}
     
-    }
+    
+  
+    
+	footer {
+		background: $blue;
+		padding: 5rem 0;
+		position: relative;
+		height: 14.375rem;
+		ul {
+			flex-direction: column;
+			padding-top: 1rem;
+		}
+		li {
+			display: flex;
+			width: 100%;
+			color: $white;
+			font-size: 0.875rem;
+			text-decoration: none;
+			justify-content: center;
+			line-height: 1.5;
+		}
+		.logos {
+			img {
+				position: absolute;
+				width: 8%;
+				top: 1.875rem;
+				right: 15rem;
+				visibility: visible;
+			}
+		}
+		.logos_2 {
+			img {
+				position: absolute;
+				width: 8%;
+				top: 2.063rem;
+				right: 11.875rem;
+				visibility: visible;
+			}
+		}
+		.logos_3 {
+			img {
+				position: absolute;
+				width: 8%;
+				top: 1.688rem;
+				right: 8.75rem;
+				visibility: visible;
+			}
+		}
+	}
+}
+
