--- a/css/style.css
+++ b/css/style.css
@@ -100,8 +100,6 @@ header {
     color: #fff; }
   .section-b p {
     line-height: 1.5; }
-  .section-b h1 {
-    font-size: 3rem; }
 
 .card-content {
   padding: 1.5em; }
@@ -237,7 +235,7 @@ footer {
     background-color: #29a29f;
     width: 100%;
     height: 2.5rem;
-    background: url(images/burger.png) no-repeat 97% center;
+    background: url(../images/burger.png) no-repeat 97% center;
     cursor: pointer; }
   footer {
     background: #29a29f;
