--- a/scss/style.scss
+++ b/scss/style.scss
@@ -127,9 +127,6 @@ header {
     p{
         line-height: 1.5;
     }
-    h1{
-        font-size: 3rem;
-    }
 }//.section-b end
 
 
@@ -322,7 +319,7 @@ footer {
 		background-color: $blue;
 		width: 100%;
 		height: 2.5rem;
-		background: url(images/burger.png) no-repeat 97% center;
+		background: url(../images/burger.png) no-repeat 97% center;
 		cursor: pointer;
 	}
     
