--- a/ItSolutions/css/style.css
+++ b/ItSolutions/css/style.css
@@ -1,1 +1,31 @@
-body{font:100% Arial,sans-serif;color:#29a39f}
+$font-stack:    Arial, sans-serif;
+$primary-color: #29a39f;
+
+body {
+  font: 100% $font-stack;
+  color: $primary-color;
+}
+
+.header {
+	a {
+		color: red;
+	}
+}
+
+.header a {}
+
+@import 'footer';
+
+
+.footer {
+  padding-bottom: 20px;
+  margin-right: 10px;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: $background_color_1;
+  color: $color_1;
+  text-align: center;
+}
+
+/*# sourceMappingURL=../css/style.map */
