--- a/css/style.css
+++ b/css/style.css
@@ -191,6 +191,80 @@ footer {
     top: 1.688rem;
     visibility: hidden; }
 
+@media screen and (max-width: 960px) and (min-width: 769px) {
+  header {
+    display: inline-block;
+    width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row; }
+    header nav li {
+      left: 10em;
+      position: relative;
+      padding-left: 3em; }
+    header .wrapper img {
+      position: fixed;
+      top: 4em;
+      width: 25%;
+      left: 2.1rem;
+      margin-bottom: 0; }
+  .card-content {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
+    flex-direction: column;
+    max-height: 15em; }
+  .card p {
+    max-width: 15em; }
+  img {
+    float: left;
+    max-width: 75%;
+    top: 13rem;
+    left: 0.6rem; }
+  footer {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    left: 0; }
+  footer li {
+    max-width: 75%; }
+  footer ul {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex; }
+  img.kunderbild {
+    width: 23em;
+    margin-top: 2em; }
+  .kontaktbild {
+    padding: 1em;
+    max-width: 30em; }
+  footer .logos img {
+    visibility: visible;
+    position: relative;
+    float: right;
+    top: 0.3em;
+    width: 4%; }
+  footer .logos_2 img {
+    visibility: visible;
+    position: relative;
+    float: right;
+    top: 0.3em;
+    width: 4%; }
+  footer .logos_3 img {
+    visibility: visible;
+    position: relative;
+    float: right;
+    top: 0.3em;
+    width: 4%;
+    margin-right: 0.5em; } }
+
 @media screen and (max-width: 768px) {
   header nav {
     float: none; }
@@ -201,7 +275,12 @@ footer {
       font-size: 0.875rem; }
   header h1.logo {
     float: none;
-    margin: 0 auto 3rem; } }
+    margin: 0 auto 3rem; }
+  footer {
+    background: #29a29f;
+    padding: 1rem 0;
+    position: relative;
+    height: 6rem; } }
 
 @media screen and (max-width: 480px) {
   header {
