--- a/scss/style.scss
+++ b/scss/style.scss
@@ -248,13 +248,96 @@ footer {
 	}
 }// footer end
 
+@media screen and (max-width: 960px) and (min-width:769px)
+{
+	header
+	{
+		display: inline-block;
+		width: 100%;
+		display: flex;
+		flex-direction: row;
+		
+	nav li { left: 10em;
+		position: relative;
+		padding-left: 3em;
 
-@media screen and (max-width: 960px){
-    
+	}
+	
+	.wrapper img{
+		position: fixed;
+		top: 4em;
+		width: 25%;
+		left: 2.1rem;
+		margin-bottom: 0;
+	}
+
+
+}
+	.card-content {
+		display: flex;
+		flex-direction: column;
+		max-height: 15em;
+	}
+
+	.card p {
+		max-width: 15em;
+	}
+img {
+	
+	float: left;
+	max-width: 75%;
+	top: 13rem;
+	left: 0.6rem;
 }
 
+footer{
+position: absolute;
+right: 0;
+bottom: 0;
+left: 0;
 
+}
+footer li{
+	max-width: 75%;
+}
+footer ul{
+	display:flex;
+}
+img.kunderbild
+{
+	width: 23em;
+	margin-top: 2em;
+}
+.kontaktbild{
+	padding: 1em;
+	max-width: 30em;
+}
+footer .logos img{
+	visibility: visible;
+	position: relative;
+	float: right;
+	top: 0.3em;
+	width: 4%;
 
+}
+footer .logos_2 img{
+	visibility: visible;
+	position: relative;
+	float: right;
+	top: 0.3em;
+	width: 4%;
+
+}
+footer .logos_3 img{
+	visibility: visible;
+	position: relative;
+	float: right;
+	top: 0.3em;
+	width: 4%;
+	margin-right: 0.5em;
+
+}
+}
 @media screen and (max-width: 768px) {
 	header {
 		nav {
@@ -270,6 +353,13 @@ footer {
 			float: none;
 			margin: 0 auto 3rem;
 		}
+	}
+
+	footer{
+		background: #29a29f;
+    padding: 1rem 0;
+    position: relative;
+    height: 6rem;
 	}
 }
 
